<resources>
    <string name="app_name">BC Unlimited</string>
    <string name="anim_view">Animation Viewer</string>
    <string name="stg_inf">Stage Info</string>
    <string name="def_animsch">Open Filter screens</string>
    <string name="def_animbck">Back to main page</string>
    <string name="def_stgbck">Back to main page</string>
    <string name="sch_nm">Search by Filter</string>
    <string name="def_schbck">Back to Animation Viewer</string>
    <string name="sch_tg">Target</string>
    <string name="sch_red">Red</string>
    <string name="sch_fl">Float</string>
    <string name="sch_bla">Black</string>
    <string name="sch_me">Metal</string>
    <string name="sch_al">Alien</string>
    <string name="sch_zo">Zombie</string>
    <string name="sch_re">Relic</string>
    <string name="sch_an">Angel</string>
    <string name="sch_wh">White</string>
    <string name="sch_or">Or</string>
    <string name="sch_and">And</string>
    <string name="sch_atk">Attack</string>
    <string name="sch_rare">Rarity</string>
    <string name="sch_rare_ba">Basic</string>
    <string name="sch_rare_ra">Rare</string>
    <string name="sch_rare_ex">EX</string>
    <string name="sch_rare_sr">Super Rare</string>
    <string name="sch_rare_ur">Uber Rare</string>
    <string name="sch_rare_lr">Legend Rare</string>
    <string name="sch_atk_si">Single</string>
    <string name="sch_atk_ra">Area</string>
    <string name="sch_atk_ld">LD</string>
    <string name="sch_atk_om">Omni</string>
    <string name="sch_atk_mu">Multi HIt</string>
    <string name="sch_abil">Ability</string>
    <string name="sch_abi_we">Weaken</string>
    <string name="sch_abi_fr">Freeze</string>
    <string name="sch_abi_sl">Slow</string>
    <string name="sch_abi_ao">Attacks Only</string>
    <string name="sch_abi_st">Strong</string>
    <string name="sch_abi_re">Resistant</string>
    <string name="sch_abi_it">Insanely Tough</string>
    <string name="sch_abi_id">Insane Damage</string>
    <string name="sch_abi_kb">Knockback</string>
    <string name="sch_abi_wa">Warp</string>
    <string name="sch_abi_str">Strengthen</string>
    <string name="sch_abi_su">Survive</string>
    <string name="sch_abi_bd">Base Destroyer</string>
    <string name="sch_abi_cr">Critical</string>
    <string name="sch_abi_zk">Zombie Killer</string>
    <string name="sch_abi_bb">Barrier Breaker</string>
    <string name="sch_abi_em">Extra Money</string>
    <string name="sch_abi_me">Metal</string>
    <string name="sch_abi_iw">Imu.Weaken</string>
    <string name="sch_abi_if">Imu.Freeze</string>
    <string name="sch_abi_is">Imu.Slow</string>
    <string name="sch_abi_ik">Imu.KB</string>
    <string name="sch_abi_iwv">Imu.Wave</string>
    <string name="sch_abi_iwa">Imu.Warp</string>
    <string name="sch_abi_ic">Imu.Curse</string>
    <string name="sch_abi_ws">Wave Shield</string>
    <string name="sch_abi_md">Massive Damage</string>
    <string name="sch_abi_wv">Wave</string>
    <string name="sch_abi_eva">Eva Angel Killer</string>
    <string name="sch_abi_wk">Witch Killer</string>
    <string name="main_file_x">Update Found</string>
    <string name="main_file_cont">You must download additional files to run this application. Will you download files?</string>
    <string name="main_file_ok">OK</string>
    <string name="main_file_cancel">Cancel</string>
    <string name="down_wait">Waiting for connection…</string>
    <string name="down_state_ok">Download Complete!</string>
    <string name="down_state_no">Download Failed…</string>
    <string name="down_state_doing">"Downloading Files… : %1$s"</string>
    <string name="down_state_rea">Ready</string>
    <string name="down_redown">Retry</string>
    <string name="down_zip_ex">"Extracting… : "</string>
    <string name="down_state_install">Installed</string>
    <string name="main_unitinfo">Unit Info</string>
    <string name="main_check_up">Checking Updates…</string>
    <string name="main_check_file">Checking files…</string>
    <string name="main_info_corr">Info file corrupted</string>
    <string name="main_info_cont">Info File is corrupted. Will you re-download files?</string>
    <string name="main_file_need">Download Required</string>
    <string name="main_file_up">You must download new files. Will you download files?</string>
    <string name="down_check_file">Checking files…</string>
    <string name="main_internet_no">No internet connection!</string>
    <string name="down_zip_rea">Preparing Extracting…</string>
    <string name="main_down_init">Initial Download Required</string>
    <string name="main_file_read">Reading Files…</string>
    <string name="def_schreset_cont">Reset Search Setting</string>
    <string name="def_unit_icon">Unit icon</string>
    <string name="unit_info_id">ID</string>
    <string name="unit_info_trait">Trait</string>
    <string name="unit_info_level">Level</string>
    <string name="unit_info_hp">HP</string>
    <string name="hb">HB</string>
    <string name="unit_info_plus"> + </string>
    <string name="unit_info_atk">Attack</string>
    <string name="unit_info_starred">Starred</string>
    <string name="unit_info_god1">Mystery Mask 1</string>
    <string name="unit_info_god2">Mystery Mask 2</string>
    <string name="unit_info_god3">Mystery Mask 3</string>
    <string name="unit_info_t_none">None</string>
    <string name="unit_info_cost">Cost</string>
    <string name="unit_info_t_allc">All Color</string>
    <string name="unit_info_t_allt">All Trait</string>
    <string name="unit_info_spd">Speed</string>
    <string name="unit_info_dps">DPS</string>
    <string name="unit_info_cd">CD</string>
    <string name="unit_info_fr">Frames</string>
    <string name="unit_info_sec">Seconds</string>
    <string name="unit_info_rang">Range</string>
    <string name="unit_info_atkt">Attack Type</string>
    <string name="def_info_back_cont">Unit info Back Button</string>
    <string name="unit_info_abil">Ability</string>
    <string name="unit_info_tba">TBA</string>
    <string name="sch_np">Consider Talents</string>
    <string name="unit_info_pre">Pre-Atk</string>
    <string name="unit_info_post">Post-Atk</string>
    <string name="unit_info_atktime">Atk-Time</string>
    <string name="unit_info_abilT">Use Ability</string>
    <string name="unit_info_true">Yes</string>
    <string name="unit_info_false">No</string>
    <string name="abi_rev">Revive</string>
    <string name="abi_stt">Stop Time</string>
    <string name="abi_snk">Sniper KB</string>
    <string name="abi_seal">Seal</string>
    <string name="abi_drn" translatable="false">Drain</string>
    <string name="abi_bles" translatable="false">Blessing</string>
    <string name="abi_sum">Summon</string>
    <string name="abi_mvatk">Moving Attack</string>
    <string name="abi_thch">Theme Change</string>
    <string name="abi_poi">Venom</string>
    <string name="abi_boswv">Boss Wave</string>
    <string name="abi_imvatk">Imu.Moving Attack</string>
    <string name="abi_isnk">Imu.Sniper KB</string>
    <string name="abi_istt">Imu.Stop Time</string>
    <string name="abi_gh">Ghost</string>
    <string name="abi_sui">Suicide</string>
    <string name="abi_ithch">Imu.Theme Change</string>
    <string name="abi_iseal">Imu.Seal</string>
    <string name="abi_iboswv">Imu.Boss Wave</string>
    <string name="abi_ipoi">Imu.Venom</string>
    <string name="unit_info_strong">" (Takes damage x0.5~x0.4 / Gives damage x1.5~x1.8)"</string>
    <string name="unit_info_masdam">" (Gives damage x3~x4)"</string>
    <string name="unit_info_resis">" (Takes damage x0.25~x0.2)"</string>
    <string name="unit_info_insres">" (Takes damage x1/6~x1/7)"</string>
    <string name="unit_info_insmas">" (Gives damage x5~x6)"</string>
    <string name="def_unit_s_icon">Unit\'s Icon</string>
    <string name="unit_info_exmon">" (Money get x2)"</string>
    <string name="unit_info_atkbs">" (Give damage x4 to Base)"</string>
    <string name="unit_info_wkill">" (Takes damage x0.1 / Gives damage x5)"</string>
    <string name="unit_info_evakill">" (Takes damage x0.2 / Gives damage x5)"</string>
    <string name="unit_info_text0">"_% chance to "</string>
    <string name="unit_info_text1">" for _f"</string>
    <string name="unit_info_text2">"create Lv._ "</string>
    <string name="unit_info_text3">" enemy to _%"</string>
    <string name="unit_info_text4">" to distance of _"</string>
    <string name="unit_info_text5">"At _% health, "</string>
    <string name="unit_info_text6">" to _%"</string>
    <string name="unit_info_text7">" _"</string>
    <string name="def_unit_info_text8">times</string>
    <string name="unit_info_text9">" after _f"</string>
    <string name="unit_info_text10">" with _% health"</string>
    <string name="def_unit_info_text11">"Immune to "</string>
    <string name="unit_info_first">First</string>
    <string name="unit_info_second">Second</string>
    <string name="unit_info_third">Third</string>
    <string name="unit_info_extitle">Unit Explanation</string>
    <string name="apk_down_title">New Apk Found</string>
    <string name="apk_down_content">"You can download newer version. Do you want to download apk file? New version : "</string>
    <string name="main_check_apk">Checking APK File…</string>
    <string name="def_config">Go to Settings</string>
    <string name="theme_light">Light</string>
    <string name="config_theme">Theme</string>
    <string name="theme_dark">Dark</string>
    <string name="config_name">Configuration</string>
    <string name="config_frse">Frame/Second</string>
    <string name="config_frames">Frames</string>
    <string name="config_seconds">Seconds</string>
    <string name="action_settings">Settings</string>
    <string name="treasure_level">Treasure/Level</string>
    <string name="treasure_cd_lev">CD Level</string>
    <string name="treasure_cd">CD Treasure</string>
    <string name="treasure_atk">Atk Treasure</string>
    <string name="treasure_heal">Health Treasure</string>
    <string name="def_treasure_set">Open Treasure Setting</string>
    <string name="treasure_invalid">Invalid Range</string>
    <string name="treasure_reset">Reset</string>
    <string name="config_testapk">Update apk to test version</string>
    <string name="config_deflev">Default Level</string>
    <string name="def_lang_en">English</string>
    <string name="def_lang_ko">한국어</string>
    <string name="def_lang_zh">中文</string>
    <string name="config_lang">Language</string>
    <string name="lang_auto">Auto</string>
    <string name="def_lang_ja">日本語</string>
    <string name="def_description">Description</string>
    <string name="def_minus">-</string>
    <string name="battle_start">Start Battle</string>
    <string name="battle_exit">Exit</string>
    <string name="stg_sch_name">Name</string>
    <string name="pack_conf_guide_del">Delete</string>
    <string name="anim_name_hint" translatable="false">Animation Name</string>
    <string name="anim_imgcut_btn" translatable="false">ImgCut Editor</string>
    <string name="anim_mamodel_btn" translatable="false">Model Editor</string>
    <string name="anim_maanim_btn" translatable="false">Anim. Editor</string>
    <string name="anim_uni_desc" translatable="false">Deploy Icon</string>
    <string name="imgcut_import" translatable="false">Import Imgcut</string>
    <string name="anim_addpart" translatable="false">Add Part</string>
    <string name="mamodel_par" translatable="false">Parent</string>
    <string name="mamodel_spr" translatable="false">Sprite</string>
    <string name="mamodel_z" translatable="false">Z-Order</string>
    <string name="def_pos" translatable="false">Position</string>
    <string name="def_piv" translatable="false">Pivot</string>
    <string name="def_scale" translatable="false">Scale</string>
    <string name="def_rot" translatable="false">Angle</string>
    <string name="def_glow" translatable="false">Glow</string>
    <string name="def_opa" translatable="false">Opacity</string>
</resources>